canvas overflow fixed

--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,9 @@ nav{
 
 .hero{
     max-height: 100vh;
+    height: 100vh;
     max-width: 100vw;
+    width: 100vw;
     overflow: hidden;
     /* background-image: url("../img/index_bg.jpg"); */
     background-color: #080e18;
